--- a/src/template.html
+++ b/src/template.html
@@ -97,7 +97,8 @@
   --theme-yellow: #FEB12B;
   --theme-red: #FF4D4D;
   --theme-gray: #9394A9;
-  --theme-midnight: #18182F;
+  --theme-midnight: #212428;
+  --theme-gold: #eaa218;
   --theme-gradient-evening: linear-gradient(180deg, #313450 0%, rgba(49, 52, 80, 0.5) 100%);
 }
 
@@ -202,10 +203,10 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 .auth-page-wrapper .auth-page {
   position: relative;
-  padding: 10px 20px;
+  padding: 30px;
   color: white;
   background: var(--theme-midnight);
-  border-radius: 20px 20px 0 0;
+  border-radius: 4px 4px 0 0;
 }
 .auth-page-wrapper .auth-page .btn-close {
   position: absolute;
@@ -221,10 +222,16 @@ a.btn.disabled, fieldset:disabled a.btn {
 /* __Header */
 .auth-page-wrapper .auth-page .__header {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 .auth-page-wrapper .auth-page .__header #status-icon svg {
-  margin: -15px 0 -25px;
+  margin: -45px 0 -45px;
+  max-width: 100px;
+}
+.auth-page-wrapper .auth-page .__header .status-title {
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
 }
 .auth-page-wrapper .auth-page .__header .status-title svg {
   margin-left: 8px;
@@ -242,8 +249,6 @@ a.btn.disabled, fieldset:disabled a.btn {
 .auth-page-wrapper .auth-page #__status-box {
   display: none;
   margin-bottom: 14px;
-  padding: 20px;
-  background: var(--theme-gradient-evening);
   border-radius: 24px;
 }
 .auth-page-wrapper .auth-page #__status-box .tag {
@@ -258,11 +263,12 @@ a.btn.disabled, fieldset:disabled a.btn {
   border-radius: 6px;
 }
 .auth-page-wrapper .auth-page #__status-box .item {
-  margin: 10px 0;
-  font-family: 'Roboto Mono';
+  margin: 0 0 20px;
+  /* font-family: 'Roboto Mono'; */
+  text-align: center;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 26px;
+  font-size: 16px;
+  line-height: 1.3;
   letter-spacing: 0.5px;
 }
 .auth-page-wrapper .auth-page #__status-box .description {
@@ -309,6 +315,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 .auth-page-wrapper .auth-page #__status-box .key {
   font-size: 12px;
   letter-spacing: 0.5px;
+  color: var(--theme-gold);
 }
 .auth-page-wrapper .auth-page #__status-box .value {
   font-family: 'Roboto Mono';
@@ -344,45 +351,62 @@ a.btn.disabled, fieldset:disabled a.btn {
   display: none;
   width: 100%;
 }
+
+/* ER */
+.er-logo {
+  max-width: 100%;
+  display: block;
+  margin: 0 0 20px;
+}
+
+.er-social {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding: 15px 0;
+}
+
+.er-social__link {
+  display: block;
+  width: 0;
+  flex-grow: 1;
+  max-width: 100px;
+}
+
+.er-social__icon {
+  width: 100%;
+}
 </style>
 
 <div class="auth-page-wrapper" style="display: none;">
   <div class="auth-page">
     <!-- close icon -->
-    <svg class="btn-close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg style="display: none;"! class="btn-close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
       <circle cx="14" cy="14" r="13.5" stroke="#595B86"/>
       <path d="M19.0659 9.06586L8.93413 19.1976" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
       <path d="M19.0659 19.1976L8.93413 9.0659" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
 
     <!-- loading screen -->
-    <div class="__loading">
-
-    </div>
+    <div class="__loading"></div>
 
     <!-- icon header -->
     <div class="__header">
+      <img class="er-logo" src="http://localhost/authentication-page/assets/er-logo.png">
+
+      <img class="tag-image" style="display: none;">
+
       <div id="status-icon"></div>
       <h2 class="status-title">
-        <strong id="status-type"></strong>
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="10" cy="10" r="10" fill="#313450"/>
-          <path d="M8.91091 11.9553H10.5991V11.7935C10.608 10.8658 10.9198 10.4329 11.6236 9.98097C12.4566 9.4529 13 8.75357 13 7.63558C13 5.9705 11.7439 5 9.9755 5C8.35857 5 7.04009 5.9039 7 7.80685H8.81737C8.8441 7.0314 9.38307 6.61751 9.96659 6.61751C10.5679 6.61751 11.0535 7.04567 11.0535 7.70695C11.0535 8.33016 10.6303 8.74405 10.0824 9.11513C9.33408 9.61941 8.91537 10.1284 8.91091 11.7935V11.9553ZM9.78842 15C10.3586 15 10.853 14.491 10.8575 13.8582C10.853 13.235 10.3586 12.726 9.78842 12.726C9.20045 12.726 8.71492 13.235 8.71938 13.8582C8.71492 14.491 9.20045 15 9.78842 15Z" fill="white"/>
-        </svg>
+        <span id="status-type"></span>
       </h2>
 
       <p id="status-message" class="text-muted m-0"></p>
-
-      <img class="tag-image" style="display: none;">
     </div>
 
     <!-- status box -->
     <div id="__status-box">
       <h1 class="item" data-value="tag.product_name"></h1>
-
-      <div class="description hide">
-        <p class="text-muted" data-value="tag.description"></p>
-      </div>
 
       <div class="row align-items-center justify-content-between">
         <div class="key col-5 p-0">UID</div>
@@ -393,17 +417,29 @@ a.btn.disabled, fieldset:disabled a.btn {
         <div class="value col-7 p-0" data-value="tag.nft_token_id"></div>
       </div>
       <div class="row align-items-center justify-content-between">
-        <div class="key col-5 p-0">Owner Address</div>
-        <a class="value col-7 p-0" target="_blank" id="owner-address" data-value="tag.nft_owner_address"></a>
-      </div>
-      <div class="row align-items-center justify-content-between">
         <div class="key col-5 p-0">Contract Address</div>
         <a class="value col-7 p-0" target="_blank" id="contract-address" data-value="tag.nft_contract_address"></a>
       </div>
     </div>
 
+    <!-- Social Links -->
+    <div class="er-social">
+      <a class="er-social__link" href="">
+        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-twitter.png">
+      </a>
+      <a class="er-social__link" href="">
+        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-opensea.png">
+      </a>
+      <a class="er-social__link" href="">
+        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-ig.png">
+      </a>
+      <a class="er-social__link" href="">
+        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-discord.png">
+      </a>
+    </div>
+
     <!-- button -->
-    <a id="redeem" class="btn btn-blue" target="_blank">Redeem NFT</a>
+    <!-- <a id="redeem" class="btn btn-blue" target="_blank">Redeem NFT</a> -->
 
     <!-- copyright -->
     <div class="__copyright">
