--- a/src/template.html
+++ b/src/template.html
@@ -210,8 +210,8 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 .auth-page-wrapper .auth-page .btn-close {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 10px;
+  right: 10px;
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -240,9 +240,11 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 .tag-image {
   margin-top: 10px;
+  margin-bottom: 20px;
   max-height: 150px;
   max-width: 100%;
   vertical-align: top;
+  border: 1px solid var(--theme-gold);
 }
 
 /* __Status box */
@@ -355,8 +357,9 @@ a.btn.disabled, fieldset:disabled a.btn {
 /* ER */
 .er-logo {
   max-width: 100%;
+  width: 400px;
   display: block;
-  margin: 0 0 20px;
+  margin: 0 auto 20px;
 }
 
 .er-social {
@@ -381,7 +384,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 <div class="auth-page-wrapper" style="display: none;">
   <div class="auth-page">
     <!-- close icon -->
-    <svg style="display: none;"! class="btn-close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg class="btn-close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
       <circle cx="14" cy="14" r="13.5" stroke="#595B86"/>
       <path d="M19.0659 9.06586L8.93413 19.1976" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
       <path d="M19.0659 19.1976L8.93413 9.0659" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -392,7 +395,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 
     <!-- icon header -->
     <div class="__header">
-      <img class="er-logo" src="http://localhost/authentication-page/assets/er-logo.png">
+      <img class="er-logo" src="https://royals.smartseal.io/static/images/er-logo.png">
 
       <img class="tag-image" style="display: none;">
 
@@ -425,16 +428,16 @@ a.btn.disabled, fieldset:disabled a.btn {
     <!-- Social Links -->
     <div class="er-social">
       <a class="er-social__link" href="">
-        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-twitter.png">
+        <img class="er-social__icon" src="https://royals.smartseal.io/static/images/er-twitter.png">
       </a>
       <a class="er-social__link" href="">
-        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-opensea.png">
+        <img class="er-social__icon" src="https://royals.smartseal.io/static/images/er-opensea.png">
       </a>
       <a class="er-social__link" href="">
-        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-ig.png">
+        <img class="er-social__icon" src="https://royals.smartseal.io/static/images/er-ig.png">
       </a>
       <a class="er-social__link" href="">
-        <img class="er-social__icon" src="http://localhost/authentication-page/assets/er-discord.png">
+        <img class="er-social__icon" src="https://royals.smartseal.io/static/images/er-discord.png">
       </a>
     </div>
 
