--- a/src/template.html
+++ b/src/template.html
@@ -421,7 +421,7 @@ a.btn.disabled, fieldset:disabled a.btn {
       </div>
       <div class="row align-items-center justify-content-between">
         <div class="key col-5 p-0">Token ID</div>
-        <div class="value col-7 p-0" data-value="tag.nft_token_id">3991</div>
+        <div class="value col-7 p-0" data-value="tag.nft_token_id"></div>
       </div>
       <div class="row align-items-center justify-content-between">
         <div class="key col-5 p-0">Contract Address</div>
