--- a/src/template.html
+++ b/src/template.html
@@ -96,9 +96,15 @@
   --theme-green: #B4FFC9;
   --theme-yellow: #FEB12B;
   --theme-red: #FF4D4D;
-  --theme-gray: #9394A9;
+  --theme-gray: #939393;
   --theme-midnight: #18182F;
   --theme-gradient-evening: linear-gradient(180deg, #313450 0%, rgba(49, 52, 80, 0.5) 100%);
+
+  --theme-error: #5a1b1b;
+  --theme-error-gradient: linear-gradient(180deg, rgba(255,255,255,0.05) 0%, rgba(0,0,0,0.05) 100%);
+
+  --modal-bg: var(--theme-midnight);
+  --modal-status-bg: var(--theme-gradient-evening);
 }
 
 /* Typography */
@@ -204,8 +210,12 @@ a.btn.disabled, fieldset:disabled a.btn {
   position: relative;
   padding: 10px 20px;
   color: white;
-  background: var(--theme-midnight);
+  background: var(--modal-bg);
   border-radius: 20px 20px 0 0;
+}
+.auth-page--lost {
+  --modal-bg: var(--theme-error);
+  --modal-status-bg: var(--theme-error-gradient);
 }
 .auth-page-wrapper .auth-page .btn-close {
   position: absolute;
@@ -213,9 +223,10 @@ a.btn.disabled, fieldset:disabled a.btn {
   left: 20px;
   cursor: pointer;
   transition: all 0.2s ease;
+  opacity: 0.5;
 }
 .auth-page-wrapper .auth-page .btn-close:hover {
-  filter: brightness(.75);
+  opacity: 1;
 }
 
 /* __Header */
@@ -243,7 +254,7 @@ a.btn.disabled, fieldset:disabled a.btn {
   display: none;
   margin-bottom: 14px;
   padding: 20px;
-  background: var(--theme-gradient-evening);
+  background: var(--modal-status-bg);
   border-radius: 24px;
 }
 .auth-page-wrapper .auth-page #__status-box .tag {
@@ -350,9 +361,9 @@ a.btn.disabled, fieldset:disabled a.btn {
   <div class="auth-page">
     <!-- close icon -->
     <svg class="btn-close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="14" cy="14" r="13.5" stroke="#595B86"/>
-      <path d="M19.0659 9.06586L8.93413 19.1976" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M19.0659 19.1976L8.93413 9.0659" stroke="#595B86" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      <circle cx="14" cy="14" r="13.5" stroke="#fff"/>
+      <path d="M19.0659 9.06586L8.93413 19.1976" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M19.0659 19.1976L8.93413 9.0659" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
 
     <!-- loading screen -->
@@ -365,10 +376,12 @@ a.btn.disabled, fieldset:disabled a.btn {
       <div id="status-icon"></div>
       <h2 class="status-title">
         <strong id="status-type"></strong>
+        <!--
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="10" cy="10" r="10" fill="#313450"/>
           <path d="M8.91091 11.9553H10.5991V11.7935C10.608 10.8658 10.9198 10.4329 11.6236 9.98097C12.4566 9.4529 13 8.75357 13 7.63558C13 5.9705 11.7439 5 9.9755 5C8.35857 5 7.04009 5.9039 7 7.80685H8.81737C8.8441 7.0314 9.38307 6.61751 9.96659 6.61751C10.5679 6.61751 11.0535 7.04567 11.0535 7.70695C11.0535 8.33016 10.6303 8.74405 10.0824 9.11513C9.33408 9.61941 8.91537 10.1284 8.91091 11.7935V11.9553ZM9.78842 15C10.3586 15 10.853 14.491 10.8575 13.8582C10.853 13.235 10.3586 12.726 9.78842 12.726C9.20045 12.726 8.71492 13.235 8.71938 13.8582C8.71492 14.491 9.20045 15 9.78842 15Z" fill="white"/>
         </svg>
+        -->
       </h2>
 
       <p id="status-message" class="text-muted m-0"></p>
@@ -399,6 +412,10 @@ a.btn.disabled, fieldset:disabled a.btn {
       <div class="row align-items-center justify-content-between">
         <div class="key col-5 p-0">Contract Address</div>
         <a class="value col-7 p-0" target="_blank" id="contract-address" data-value="tag.nft_contract_address"></a>
+      </div>
+      <div class="row align-items-center justify-content-between" style="display: none;">
+        <div class="key col-5 p-0">Contact</div>
+        <a class="value col-7 p-0" target="_blank" id="contact" data-value="tag.nft_owner_contact"></a>
       </div>
     </div>
 
