--- a/src/template.html
+++ b/src/template.html
@@ -1,22 +1,4 @@
 <style>
-/* Inter */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7W0Q5nw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7W0Q5nw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 /* Roboto Mono */
 @font-face {
   font-family: 'Roboto Mono';
@@ -64,18 +46,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  gap: 8px;
 }
 /* .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto */
 .col-5, .col-7 {
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 .col-5 {
   -webkit-box-flex: 0;
@@ -97,19 +78,22 @@
   --theme-yellow: #FEB12B;
   --theme-red: #FF4D4D;
   --theme-gray: #939393;
-  --theme-midnight: #18182F;
+  --theme-midnight: #000;
   --theme-gradient-evening: linear-gradient(180deg, #313450 0%, rgba(49, 52, 80, 0.5) 100%);
 
   --theme-error: #5a1b1b;
   --theme-error-gradient: linear-gradient(180deg, rgba(255,255,255,0.05) 0%, rgba(0,0,0,0.05) 100%);
 
+  --lms-purple: #3c2f5b;
+
   --modal-bg: var(--theme-midnight);
-  --modal-status-bg: var(--theme-gradient-evening);
+  --modal-status-bg: var(--lms-purple);
 }
 
 /* Typography */
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: "Arial","Helvetica","Serif";
+  box-sizing: border-box;
 }
 body {
   margin: 0;
@@ -192,8 +176,11 @@ a.btn.disabled, fieldset:disabled a.btn {
 /* Auth Page */
 .auth-page-wrapper {
   position: fixed;
-  bottom: -1px;
-  width: 100%;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
   z-index: 999999;
 }
 .auth-page-wrapper::before {
@@ -206,43 +193,47 @@ a.btn.disabled, fieldset:disabled a.btn {
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
 }
-.auth-page-wrapper .auth-page {
+.auth-page {
   position: relative;
-  padding: 10px 20px;
+  padding: 10px 15px;
+  width: 100%;
   color: white;
   background: var(--modal-bg);
   border-radius: 20px 20px 0 0;
+  margin-top: auto;
 }
 .auth-page--lost {
   --modal-bg: var(--theme-error);
   --modal-status-bg: var(--theme-error-gradient);
 }
-.auth-page-wrapper .auth-page .btn-close {
+.btn-close {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 10px;
+  left: 15px;
   cursor: pointer;
   transition: all 0.2s ease;
   opacity: 0.5;
 }
-.auth-page-wrapper .auth-page .btn-close:hover {
+.btn-close:hover {
   opacity: 1;
 }
 
 /* __Header */
-.auth-page-wrapper .auth-page .__header {
+.__header {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
-.auth-page-wrapper .auth-page .__header #status-icon svg {
-  margin: -15px 0 -25px;
+.__header #status-icon svg {
+  margin: -25px 0 -20px;
 }
-.auth-page-wrapper .auth-page .__header .status-title svg {
+.__header .status-title svg {
   margin-left: 8px;
   margin-right: -8px;
   vertical-align: text-bottom;
 }
-.tag-image {
+
+.tag-image,
+.lms-image {
   margin-top: 10px;
   max-height: 150px;
   max-width: 100%;
@@ -250,16 +241,15 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 
 /* __Status box */
-.auth-page-wrapper .auth-page #__status-box {
+#__status-box {
   display: none;
-  margin-bottom: 14px;
-  padding: 20px;
-  background: var(--modal-status-bg);
-  border-radius: 24px;
+  margin-bottom: 0px;
+  padding: 0 ;
+  /* background: var(--modal-status-bg); */
 }
-.auth-page-wrapper .auth-page #__status-box .tag {
+.tag {
   padding: 6px 12px;
-  font-family: 'Roboto Mono';
+  font-family: "Arial","Helvetica","Serif";
   font-weight: bold;
   font-size: 10px;
   line-height: 13px;
@@ -268,93 +258,149 @@ a.btn.disabled, fieldset:disabled a.btn {
   background: var(--theme-midnight);
   border-radius: 6px;
 }
-.auth-page-wrapper .auth-page #__status-box .item {
-  margin: 10px 0;
-  font-family: 'Roboto Mono';
+.item {
+  margin: 0 0 10px;
+  font-family: "Arial","Helvetica","Serif";
   font-weight: 500;
   font-size: 20px;
   line-height: 26px;
   letter-spacing: 0.5px;
 }
-.auth-page-wrapper .auth-page #__status-box .description {
-  margin-bottom: 16px;
+.description {
+  margin-bottom: 10px;
   position: relative;
+  opacity: 0.8;
 }
-.auth-page-wrapper .auth-page #__status-box .description p {
+.description p {
   margin: 0;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 18px;
   cursor: pointer;
 }
-.auth-page-wrapper .auth-page #__status-box .description.hide {
-  padding-bottom: 18px;
+h2.row {
+  margin: 0;
 }
-.auth-page-wrapper .auth-page #__status-box .description.hide p {
-  display: block;
-  display: -webkit-box;
-  max-height: calc(12px*1.5*2);
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.row:not(:first-child) {
+  margin-top: 4px;
 }
-.auth-page-wrapper .auth-page #__status-box .description:not(.hide) p::after {
-  content: 'less';
-  display: inline;
-  margin-left: 5px;
-  color: white;
-}
-.auth-page-wrapper .auth-page #__status-box .description.hide::after {
-  content: 'more';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  color: white;
-  font-size: 12px;
-  line-height: 18px;
-}
-.auth-page-wrapper .auth-page #__status-box > .row {
-  margin: 7px 0;
-}
-.auth-page-wrapper .auth-page #__status-box .key {
-  font-size: 12px;
+.key {
+  font-size: 13px;
   letter-spacing: 0.5px;
+  flex-shrink: 0;
 }
-.auth-page-wrapper .auth-page #__status-box .value {
+.value {
   font-family: 'Roboto Mono';
-  font-size: 12px;
-  text-align: right;
-  letter-spacing: 1px;
-  text-decoration-line: underline;
+  font-size: 13px;
   color: white;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 400px;
   transition: all 0.2s ease;
 }
-.auth-page-wrapper .auth-page #__status-box a.value:hover {
+h2 .key,
+h2 .value {
+  font-size: 16px;
+}
+
+.value--address {
+  letter-spacing: 1px;
+  max-width: 400px;
+  text-decoration-line: underline;
+}
+
+a.value:hover {
   color: var(--theme-blue);
 }
 
 /* __Copyright */
-.auth-page-wrapper .auth-page .__copyright {
-  margin-top: 14px;
+.__copyright {
+  margin-top: 10px;
   text-align: center;
   color: var(--theme-gray);
 }
-.auth-page-wrapper .auth-page .__copyright a {
+.__copyright a {
   color: var(--theme-gray);
 }
-.auth-page-wrapper .auth-page .__copyright strong {
+.__copyright strong {
   color: white;
   font-weight: 500;
 }
-.auth-page-wrapper .auth-page .btn {
+.btn {
   display: none;
   width: 100%;
 }
+
+/* Loan My Sole custom styles */
+.auth-page-wrapper {
+  box-sizing: border-box;
+  padding: 0 8px;
+}
+
+.auth-page {
+  padding-top: 50px;
+  border-radius: 4px 4px 0px 0px;
+}
+
+.lms-logo {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  height: 30px;
+}
+
+.tag-image,
+.lms-image {
+  max-height: 220px;
+  width: 100%;
+  margin: 10px 0 0;
+  object-fit: contain;
+  object-position: center;
+}
+
+.details-toggle {
+  padding: 0;
+  bottom: 0;
+  color: #fff;
+  text-decoration: underline;
+  background: none;
+  border: none;
+  margin: 10px 0 0;
+}
+
+.btn-icon {
+  display: block;
+  padding: 0;
+  background: none;
+  border: none;
+  color: #fff;
+  border-radius: 50px;
+}
+
+.btn-icon svg {
+  display: block;
+  margin: 0 auto 4px;
+}
+
+.btn-icon--nft {
+  float: right;
+  margin: 0 0 0 16px;
+}
+
+.btn-icon--back {
+  position: absolute;
+  top: -64px;
+  left: 48px;
+}
+
+.hidden {
+  display: none;
+}
+
+.contract-page {
+  position: relative;
+  margin-top: 20px;
+}
+
 </style>
 
 <div class="auth-page-wrapper" style="display: none;">
@@ -366,61 +412,173 @@ a.btn.disabled, fieldset:disabled a.btn {
       <path d="M19.0659 19.1976L8.93413 9.0659" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
 
+    <img src="https://www.loanmysole.com/static/media/whitelogo.2d9a8fcf.png" alt="" class="lms-logo">
+
     <!-- loading screen -->
     <div class="__loading">
 
     </div>
 
-    <!-- icon header -->
-    <div class="__header">
-      <div id="status-icon"></div>
-      <h2 class="status-title">
-        <strong id="status-type"></strong>
-        <!--
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="10" cy="10" r="10" fill="#313450"/>
-          <path d="M8.91091 11.9553H10.5991V11.7935C10.608 10.8658 10.9198 10.4329 11.6236 9.98097C12.4566 9.4529 13 8.75357 13 7.63558C13 5.9705 11.7439 5 9.9755 5C8.35857 5 7.04009 5.9039 7 7.80685H8.81737C8.8441 7.0314 9.38307 6.61751 9.96659 6.61751C10.5679 6.61751 11.0535 7.04567 11.0535 7.70695C11.0535 8.33016 10.6303 8.74405 10.0824 9.11513C9.33408 9.61941 8.91537 10.1284 8.91091 11.7935V11.9553ZM9.78842 15C10.3586 15 10.853 14.491 10.8575 13.8582C10.853 13.235 10.3586 12.726 9.78842 12.726C9.20045 12.726 8.71492 13.235 8.71938 13.8582C8.71492 14.491 9.20045 15 9.78842 15Z" fill="white"/>
-        </svg>
-        -->
-      </h2>
+    <div data-page="product">
 
-      <p id="status-message" class="text-muted m-0"></p>
+      <!-- icon header -->
+      <div class="__header">
+        <div id="status-icon"></div>
+        <h2 class="status-title">
+          <strong id="status-type"></strong>
+        </h2>
+
+        <p id="status-message" class="m-0"></p>
+      </div>
+
+      <!-- status box -->
+      <div id="__status-box">
+
+        <button class="btn-icon btn-icon--nft" data-show-page="contract">
+          <svg width="30" height="30" version="1.1" viewBox="215 135 270 290" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g fill-rule="evenodd" fill="#fff">
+              <path d="m346.09 140.92-122.5 61.25c-2.9688 1.4844-4.8398 4.5156-4.8398 7.832v140c-0.019531 3.332 1.8594 6.3867 4.8398 7.875l122.5 61.25c2.4609 1.2305 5.3594 1.2305 7.8203 0l122.5-61.25c2.9805-1.4883 4.8594-4.543 4.8398-7.875v-140c0-3.3164-1.8711-6.3477-4.8398-7.832l-122.5-61.25c-2.4609-1.2305-5.3594-1.2305-7.8203 0zm117.66 74.488v129.19l-113.75 56.875-113.75-56.875v-129.19l113.75-56.875z"/>
+              <path d="m288.75 277.93-18.375-36.844c-1.7852-3.6875-5.8906-5.6445-9.8789-4.707-3.9883 0.94141-6.793 4.5195-6.7461 8.6172v78.75h17.5v-41.684l18.418 36.848v-0.003906c1.8125 3.6367 5.8867 5.5469 9.8398 4.6133 3.9531-0.92969 6.7461-4.4609 6.7422-8.5234v-78.75h-17.5z"/>
+              <path d="m323.75 245v78.75h17.5v-35h26.25v-17.5h-26.25v-17.5h35v-17.5h-43.75c-4.832 0-8.75 3.918-8.75 8.75z"/>
+              <path d="m411.25 323.75h17.5v-70h17.5v-17.5h-52.5v17.5h17.5z"/>
+            </g>
+          </svg>
+          info
+        </button>
+
+        <h1 class="item">
+          <span data-value="lms.name"></span>
+        </h1>
+
+        <div class="description">
+          <p>Owner: <span data-value="lms.owner"></span></p>
+        </div>
+
+        <div class="details hidden">
+          <div class="row align-items-center">
+            <span class="key">Size:</span>
+            <span class="value" data-value="lms.size"></span>
+          </div>
+
+          <div class="row align-items-center">
+            <span class="key">Owner Rating:</span>
+            <span class="value" data-value="lms.ownerRating"></span>
+          </div>
+
+          <div class="row align-items-center">
+            <span class="key">LMS Rating:</span>
+            <span class="value" data-value="lms.lmsRating"></span>
+          </div>
+
+          <div class="row align-items-center">
+            <span class="key">Experience Start Date:</span>
+            <span class="value" data-value="lms.start"></span>
+          </div>
+
+          <div class="row align-items-center">
+            <span class="key">Ship Back By:</span>
+            <span class="value" data-value="lms.shipBackBy"></span>
+          </div>
+
+          <div class="row align-items-center">
+            <span class="key">Product Protection:</span>
+            <span class="value" data-value="lms.productProtection"></span>
+          </div>
+        </div>
+
+        <button class="details-toggle">More</button>
+
+        <img class="lms-image" style="display: none;">
+      </div>
+
+    </div>
+
+    <div class="contract-page" data-page="contract" style="display: none;">
+
+      <button class="btn-icon btn-icon--back" data-show-page="product">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path d="M21,11H6.83L10.41,7.41L9,6L3,12L9,18L10.41,16.58L6.83,13H21V11Z" fill="#fff"/>
+        </svg>
+        back
+      </button>
+
+      <h2 class="row align-items-center" data-value="lms.nftName"></h2>
+
+      <div class="row align-items-center">
+        <span class="key">NFT Address:</span>
+        <a class="value value--address" target="_blank" id="contract-address" data-value="lms.nftAddress"></a>
+      </div>
+
+      <div class="row align-items-center">
+        <span class="key">XP:</span>
+        <span class="value" data-value="lms.experience"></span>
+      </div>
+
+      <div class="row align-items-center">
+        <span class="key">Connected:</span>
+        <span class="value" data-value="lms.connectedStr"></span>
+      </div>
+
+      <div class="details hidden">
+        <div class="row align-items-center">
+          <span class="key">Background:</span>
+          <span class="value" data-value="lms.Background"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Box:</span>
+          <span class="value" data-value="lms.Box"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Chain:</span>
+          <span class="value" data-value="lms.Chain"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Earring:</span>
+          <span class="value" data-value="lms.Earring"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Exterior:</span>
+          <span class="value" data-value="lms.Exterior"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Eyes:</span>
+          <span class="value" data-value="lms.Eyes"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Facial Hair:</span>
+          <span class="value" data-value="lms.FacialHair"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Headwear:</span>
+          <span class="value" data-value="lms.Headwear"></span>
+        </div>
+
+        <div class="row align-items-center">
+          <span class="key">Mouth:</span>
+          <span class="value" data-value="lms.Mouth"></span>
+        </div>
+      </div>
+
+      <button class="details-toggle">More</button>
 
       <img class="tag-image" style="display: none;">
     </div>
 
-    <!-- status box -->
-    <div id="__status-box">
-      <h1 class="item" data-value="tag.product_name"></h1>
-
-      <div class="description hide">
-        <p class="text-muted" data-value="tag.description"></p>
-      </div>
-
-      <div class="row align-items-center justify-content-between">
-        <div class="key col-5 p-0">UID</div>
-        <div class="value col-7 p-0" data-value="tag.uid"></div>
-      </div>
-      <div class="row align-items-center justify-content-between">
-        <div class="key col-5 p-0">Token ID</div>
-        <div class="value col-7 p-0" data-value="tag.nft_token_id"></div>
-      </div>
-      <div class="row align-items-center justify-content-between">
-        <div class="key col-5 p-0">Owner Address</div>
-        <a class="value col-7 p-0" target="_blank" id="owner-address" data-value="tag.nft_owner_address"></a>
-      </div>
-      <div class="row align-items-center justify-content-between">
-        <div class="key col-5 p-0">Contract Address</div>
-        <a class="value col-7 p-0" target="_blank" id="contract-address" data-value="tag.nft_contract_address"></a>
-      </div>
-      <div class="row align-items-center justify-content-between" style="display: none;">
-        <div class="key col-5 p-0">Contact</div>
-        <a class="value col-7 p-0" target="_blank" id="contact" data-value="tag.nft_owner_contact"></a>
-      </div>
+    <!-- button -->
+    <div style="display: none;">
+      <a id="redeem" class="btn btn-blue" target="_blank">Redeem NFT</a>
     </div>
 
-    <!-- button -->
-    <a id="redeem" class="btn btn-blue" target="_blank">Redeem NFT</a>
+    <div style="background-color: #999; height: 34px; margin-top: 12px;"></div>
+
+    <div style="background-color: #999; height: 34px; margin-top: 12px;"></div>
 
     <!-- copyright -->
     <div class="__copyright">
