Remove copyright line and bigger fonts

--- a/src/template.html
+++ b/src/template.html
@@ -195,7 +195,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 .auth-page {
   position: relative;
-  padding: 10px 15px;
+  padding: 15px;
   width: 100%;
   color: white;
   background: var(--modal-bg);
@@ -284,13 +284,13 @@ h2.row {
   margin-top: 4px;
 }
 .key {
-  font-size: 13px;
+  font-size: 14px;
   letter-spacing: 0.5px;
   flex-shrink: 0;
 }
 .value {
   font-family: 'Roboto Mono';
-  font-size: 13px;
+  font-size: 14px;
   color: white;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -365,6 +365,7 @@ a.value:hover {
   background: none;
   border: none;
   margin: 10px 0 0;
+  font-size: 14px;
 }
 
 .btn-icon {
@@ -373,6 +374,7 @@ a.value:hover {
   background: none;
   border: none;
   color: #fff;
+  font-size: 14px;
 }
 
 .btn-icon svg {
@@ -591,10 +593,5 @@ a.value:hover {
     <!-- <div style="display: none;">
       <a id="redeem" class="btn btn-blue" target="_blank">Redeem NFT</a>
     </div> -->
-
-    <!-- copyright -->
-    <div class="__copyright">
-      <a href="https://www.smartseal.io/" target="_blank">Powered by <strong>SmartSeal</strong></a>
-    </div>
   </div>
 </div>
