--- a/auth-page.html
+++ b/auth-page.html
@@ -12,9 +12,7 @@
     <script>
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
-      if( ! urlParams.get('pl') ) {
-        window.location.href = window.location.href.split('?')[0] + '?pl=4D43652BD6DFD67F9359EEEB178BFD7AFBA2C1915C52AF90';
-      }
+      if( !urlParams.get('pl') ) window.location.href = window.location.href.split('?')[0] + '?pl=4D43652BD6DFD67F9359EEEB178BFD7AFBA2C1915C52AF90';
     </script>
     <script type="text/javascript" src="./dist/main.js"></script>
   </body>
